--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".C"
-            android:label="C"/>
-        <activity android:name=".B"
-            android:label="B"/>
-        <activity android:name=".A"
-            android:label="A"/>
-        <activity android:name=".MainActivity" android:label="MainActivity">
+        <activity android:name=".SingleFragmentActivity"></activity>
+        <activity android:name=".ViewPagerActivity" />
+        <activity
+            android:name=".C"
+            android:label="C" />
+        <activity
+            android:name=".B"
+            android:label="B" />
+        <activity
+            android:name=".A"
+            android:label="A" />
+        <activity
+            android:name=".MainActivity"
+            android:label="MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
