--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+//pathStat 插件
+apply plugin: 'path-stat-plugin'
 
 android {
     compileSdkVersion 29
