--- a/build.gradle
+++ b/build.gradle
@@ -3,24 +3,27 @@
 buildscript {
     ext.kotlin_version = '1.3.70'
     repositories {
+        flatDir {
+            dirs './repo/'
+        }
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath 'com.android.tools.build:gradle:3.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.yuewen.cooperate.pathstat:pathstatplugin:1.0.0"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
+        flatDir {
+            dirs './repo/'
+        }
         google()
         jcenter()
-        
     }
 }
 
