--- a/pathstatplugin/build.gradle
+++ b/pathstatplugin/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'groovy'
-apply plugin: 'maven-publish'
 apply plugin: 'maven'
 apply plugin: 'java'
+
+apply from : 'publishToMaven.gradle'
 
 repositories {
     mavenCentral()
@@ -16,17 +17,4 @@ dependencies {
     implementation 'com.android.tools.build:gradle:3.2.0'
     implementation 'org.ow2.asm:asm:5.0.3'
     implementation 'org.ow2.asm:asm-commons:5.0.3'
-}
-
-//def ARTIFACT_ID = 'pathStatPlugin'
-
-group = 'com.yuewen.cooperate.pathstat'
-version = "1.0.0"
-
-uploadArchives {
-    repositories {
-        flatDir {
-            dirs '../repo/'
-        }
-    }
 }
