--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@
 
 buildscript {
     ext.kotlin_version = '1.3.70'
+    def internalMavenUrl = "http://dev.inner.yuewen.local/nexus/repository/maven-public/"
     repositories {
+        maven {
+            url internalMavenUrl
+        }
         flatDir {
             dirs './repo/'
         }
@@ -18,7 +22,11 @@ buildscript {
 }
 
 allprojects {
+    def internalMavenUrl = "http://dev.inner.yuewen.local/nexus/repository/maven-public/"
     repositories {
+        maven {
+            url internalMavenUrl
+        }
         flatDir {
             dirs './repo/'
         }
