--- a/pathstatsdk/build.gradle
+++ b/pathstatsdk/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+apply from : 'android-library-publish.gradle'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
