--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'path-stat-plugin'
 pathStatPlugin.customViewPagerClass = [
     "com/qq/reader/widget/RankBaseViewPager"
 ]
-pathStatPlugin.isPrintAllClass = false
-pathStatPlugin.isPrintAllMethod = false
+pathStatPlugin.isDebug = true
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
