--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SingleFragmentActivity"></activity>
+        <activity android:name=".CustomViewPagerActivity"/>
+        <activity android:name=".SingleFragmentActivity"/>
         <activity android:name=".ViewPagerActivity" />
         <activity
             android:name=".C"
