--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CustomViewPagerActivity"/>
-        <activity android:name=".SingleFragmentActivity"/>
+        <activity android:name="com.qq.reader.activity.BlackListActivity"></activity>
+        <activity android:name=".CustomViewPagerActivity" />
+        <activity android:name=".SingleFragmentActivity" />
         <activity android:name=".ViewPagerActivity" />
         <activity
             android:name=".C"
