--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.qq.reader.activity.BlackListActivity"></activity>
+        <activity android:name=".NewProgressActivity"
+            android:process=":newProgress"/>
+        <activity android:name="com.qq.reader.activity.BlackListActivity" />
         <activity android:name=".CustomViewPagerActivity" />
         <activity android:name=".SingleFragmentActivity" />
         <activity android:name=".ViewPagerActivity" />
