支持增量编译

--- a/pathstatplugin/publishToMaven.gradle
+++ b/pathstatplugin/publishToMaven.gradle
@@ -7,25 +7,33 @@ def artifactId = "pathstatplugin"
 def releaseRepoUrl = "http://dev.inner.yuewen.local/nexus/repository/maven-releases/"
 def snapShotsRepoUrl = "http://dev.inner.yuewen.local/nexus/repository/maven-snapshots/"
 
-//上传到nexus
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "$releaseRepoUrl") {
-                authentication(userName: "dev", password: "dev")
+println "uploadToMaven: " + uploadToMaven
+if (uploadToMaven.toBoolean()) {
+    //上传到nexus
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository(url: "$releaseRepoUrl") {
+                    authentication(userName: "dev", password: "dev")
+                }
+                pom.version = "$project.version"
+                pom.artifactId = "$artifactId"
+                pom.groupId = "$project.group"
             }
-            pom.version = "$project.version"
-            pom.artifactId = "$artifactId"
-            pom.groupId = "$project.group"
         }
+    }.doFirst {
+        println "正在上传到 Maven ..."
+    }
+} else {
+    //上传到本地
+    uploadArchives {
+        repositories {
+            flatDir {
+                dirs '../repo/'
+            }
+        }
+    }.doFirst {
+        println "正在上传到本地 ..."
     }
 }
 
-//上传到本地
-//uploadArchives {
-//    repositories {
-//        flatDir {
-//            dirs '../repo/'
-//        }
-//    }
-//}
